[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/obstacle_patterns/ZigzagShort.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/PatternSpawner.gd" type="Script" id=2]
[ext_resource path="res://scenes/obstacle_patterns/Simple.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/obstacle_patterns/RightTunnel.tscn" type="PackedScene" id=4]

[node name="PatternSpawner" type="Node2D" groups=[
"spawners",
]]
script = ExtResource( 2 )
Patterns = [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ) ]

[node name="EndOfPattern" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 38.4, 1.6 )

[connection signal="screen_entered" from="EndOfPattern" to="." method="_on_EndOfPattern_screen_entered"]
[connection signal="screen_exited" from="EndOfPattern" to="." method="_on_EndOfPattern_screen_exited"]
